Weston drm-backend.so seems to fail with Mesa master and LIBGL_ALWAYS_SOFTWARE=1
Submitted by n3rdopolis
Assigned to mes..@..op.org
Link to original bug (#109258)
Description
Hi
I first noticed this on UDL/Displaylink, but now I see this on QXL too Weston's gl-backend fails to initialize EGL, 0x3001 , and quits.
I noticed it selects a (null) driver. I am not sure how long this issue has been happening, it's not an immediate regression that I noticed, but I know it used to work a few years ago IIRC. I tried to include everything relevant...
I reported this to the Wayland project as well, but it appears that they suggested to report it here wayland/weston#183 (closed)
I tried different GALLIUM_DRIVERs as well
relevant variables: COGL_RENDERER=egl_wayland LIBGL_ALWAYS_SOFTWARE=1
Weston log output: Date: 2019-01-09 UTC [03:45:43.647] weston 5.0.90 https://wayland.freedesktop.org Bug reports to: https://gitlab.freedesktop.org/wayland/weston/issues/ Build: 5.0.0-110-g13dda10f+ [03:45:43.649] Command line: weston [03:45:43.650] OS: Linux, 4.19.0-1-686-pae, #1 (closed) SMP Debian 4.19.12-1 (2018-12-22), i686 [03:45:43.652] Using config file '/home/beccaholic/.config/weston.ini' [03:45:43.653] Output repaint window is 7 ms maximum. [03:45:43.654] Loading module '/opt/lib/i386-linux-gnu/libweston-5/drm-backend.so' [03:45:43.660] initializing drm backend [03:45:43.671] logind: session control granted [03:45:43.676] using /dev/dri/card0 [03:45:43.678] DRM: supports universal planes [03:45:43.678] DRM: does not support atomic modesetting [03:45:43.679] DRM: supports picture aspect ratio [03:45:43.680] Loading module '/opt/lib/i386-linux-gnu/libweston-5/gl-renderer.so' pci id for fd 14: 1234:1111, driver (null) [03:45:43.717] EGL client extensions: EGL_EXT_client_extensions EGL_EXT_device_base EGL_EXT_device_enumeration EGL_EXT_device_query EGL_EXT_platform_base EGL_KHR_client_get_all_proc_addresses EGL_KHR_debug EGL_EXT_platform_wayland EGL_EXT_platform_x11 EGL_MESA_platform_gbm [03:45:43.718] failed to initialize display [03:45:43.718] EGL error state: EGL_NOT_INITIALIZED (0x3001) [03:45:43.719] failed to initialize egl [03:45:43.720] fatal: failed to create compositor backend [03:45:43.720] Internal warning: debug scope 'drm-backend' has not been destroyed.
This is what I compiled Mesa with
meson --buildtype=plain --prefix=INSTALLDIR --libdir=
INSTALLDIR/lib/$(dpkg-architecture -qDEB_HOST_MULTIARCH) -Dgles1=true -Dgles2=true -Dplatforms=x11,wayland,drm -Dgallium-drivers=nouveau,svga,r300,r600,swrast,radeonsi,virgl -Ddri-drivers=r200,nouveau,i915,i965 -Dosmesa=gallium -Dgallium-xa=true -Dgbm=true -Dshared-glapi=true -Dshared-llvm=true -Dvulkan-drivers=intel,amd -Dllvm=true build
Could I possibly be missing an option?
Version: git